fix bug in transformation function

--- a/notebooks/training_models.ipynb
+++ b/notebooks/training_models.ipynb
@@ -3529,16 +3529,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "GPU enabled\r\n",
-      "2020-09-18 13:05:30,602:INFO: Start with arguments Namespace(backbone='resnet18', batch_size=8, datapath=PosixPath('../data/training_data'), epochs=2, load='./models/082020/resnet18', lr=0.05, lr_decay=0.75, lr_decay_step=5, mode='train', num_pts=8, pretrained=False, retrain=False, save='../models/091820/resnet18_2e', seed=720723432, shuffle=True, target='./data/test_data/image8.tif', transform=True, val_split=0.2)\r\n",
-      "2020-09-18 13:05:32,511:INFO: Building new model for training\r\n",
-      "2020-09-18 13:05:32,512:INFO: Model:\r\n",
+      "2020-10-05 11:29:00,530:INFO: Start with arguments Namespace(backbone='resnet18', batch_size=8, datapath=PosixPath('../data/training_data'), epochs=2, load='./models/082020/resnet18', lr=0.05, lr_decay=0.75, lr_decay_step=5, mode='train', num_pts=8, pretrained=False, retrain=False, save='../models/091820/resnet18_2e', seed=409209057, shuffle=True, target='./data/test_data/image8.tif', transform=True, val_split=0.2)\r\n",
+      "2020-10-05 11:29:02,120:INFO: Building new model for training\r\n",
+      "2020-10-05 11:29:02,121:INFO: Model:\r\n",
       "Model(\r\n",
       "  (features): ResNet(\r\n",
       "    (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\r\n",
@@ -3625,22 +3625,26 @@
       "    (fc): Linear(in_features=512, out_features=16, bias=True)\r\n",
       "  )\r\n",
       ")\r\n",
-      "2020-09-18 13:05:36,106:INFO: Train: epoch 0   learning rate: 0.05\r\n",
-      "2020-09-18 13:05:37,675:INFO: epoch 1/2, step 5/5984,  loss 1525.0357316133475\r\n",
-      "2020-09-18 13:05:39,209:INFO: epoch 1/2, step 10/5984,  loss 1683.0833114212624\r\n",
-      "2020-09-18 13:05:40,735:INFO: epoch 1/2, step 15/5984,  loss 3535.641149204638\r\n",
-      "2020-09-18 13:05:42,314:INFO: epoch 1/2, step 20/5984,  loss 1799.7726168042277\r\n",
-      "2020-09-18 13:05:43,869:INFO: epoch 1/2, step 25/5984,  loss 3934.83430575357\r\n",
-      "2020-09-18 13:05:45,412:INFO: epoch 1/2, step 30/5984,  loss 1607.5238904999428\r\n",
-      "2020-09-18 13:05:46,987:INFO: epoch 1/2, step 35/5984,  loss 678.2725681614061\r\n",
-      "2020-09-18 13:05:48,532:INFO: epoch 1/2, step 40/5984,  loss 975.1859147519425\r\n",
-      "2020-09-18 13:05:50,097:INFO: epoch 1/2, step 45/5984,  loss 1268.2794384201613\r\n",
-      "2020-09-18 13:05:51,671:INFO: epoch 1/2, step 50/5984,  loss 4017.326650420837\r\n",
-      "2020-09-18 13:05:53,235:INFO: epoch 1/2, step 55/5984,  loss 1095.0411299352147\r\n",
-      "2020-09-18 13:05:54,769:INFO: epoch 1/2, step 60/5984,  loss 1934.2193907551493\r\n",
-      "2020-09-18 13:05:56,338:INFO: epoch 1/2, step 65/5984,  loss 1553.8851384546347\r\n",
-      "2020-09-18 13:05:57,908:INFO: epoch 1/2, step 70/5984,  loss 1466.799428395207\r\n",
-      "2020-09-18 13:05:59,467:INFO: epoch 1/2, step 75/5984,  loss 1166.8105359571716\r\n"
+      "2020-10-05 11:29:05,342:INFO: Train: epoch 0   learning rate: 0.05\r\n",
+      "2020-10-05 11:29:07,290:INFO: epoch 1/2, step 5/5984,  loss 40.64276762432161\r\n",
+      "2020-10-05 11:29:08,618:INFO: epoch 1/2, step 10/5984,  loss 12.253016320127792\r\n",
+      "2020-10-05 11:29:10,277:INFO: epoch 1/2, step 15/5984,  loss 0.17832432570137696\r\n",
+      "2020-10-05 11:29:12,859:INFO: epoch 1/2, step 20/5984,  loss 0.014227858048657347\r\n",
+      "2020-10-05 11:29:15,483:INFO: epoch 1/2, step 25/5984,  loss 0.0022175396632539025\r\n",
+      "2020-10-05 11:29:17,670:INFO: epoch 1/2, step 30/5984,  loss 0.0041487789987853345\r\n",
+      "2020-10-05 11:29:19,764:INFO: epoch 1/2, step 35/5984,  loss 0.007004022323996114\r\n",
+      "^C\r\n",
+      "Traceback (most recent call last):\r\n",
+      "  File \"../main.py\", line 416, in <module>\r\n",
+      "    main(args)\r\n",
+      "  File \"../main.py\", line 382, in main\r\n",
+      "    train(args, model)\r\n",
+      "  File \"../main.py\", line 235, in train\r\n",
+      "    new_width)\r\n",
+      "  File \"../main.py\", line 179, in transform_input\r\n",
+      "    pt_inds = [np.int(np.round(np.mean(pt[0]))), np.int(np.round(np.mean(pt[1])))]\r\n",
+      "  File \"<__array_function__ internals>\", line 6, in round_\r\n",
+      "KeyboardInterrupt\r\n"
      ]
     }
    ],
@@ -3650,8 +3654,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   }
