fixed randomization of rotation and scale values for transformations

--- a/notebooks/training_models.ipynb
+++ b/notebooks/training_models.ipynb
@@ -4302,9 +4302,9 @@
      "output_type": "stream",
      "text": [
       "GPU enabled\r\n",
-      "2020-10-11 16:31:53,949:INFO: Start with arguments Namespace(backbone='resnet18', batch_size=1, datapath=PosixPath('../data/training_data_v3'), epochs=2, load='../models/100820/resnet18_retrain_trans/resnet18', lr=0.05, lr_decay=0.75, lr_decay_step=5, mode='train', num_pts=8, pretrained=False, retrain=True, save='../models/091820/resnet18_2e', seed=987428122, shuffle=True, target='./data/test_data/image8.tif', transform=True, val_split=0.2)\r\n",
-      "2020-10-11 16:31:55,772:INFO: Loading model for training from ../models/100820/resnet18_retrain_trans/resnet18\r\n",
-      "2020-10-11 16:31:55,773:INFO: Model:\r\n",
+      "2020-10-11 16:54:38,383:INFO: Start with arguments Namespace(backbone='resnet18', batch_size=1, datapath=PosixPath('../data/training_data_v3'), epochs=2, load='../models/100820/resnet18_retrain_trans/resnet18', lr=0.05, lr_decay=0.75, lr_decay_step=5, mode='train', num_pts=8, pretrained=False, retrain=True, save='../models/091820/resnet18_2e', seed=133630484, shuffle=True, target='./data/test_data/image8.tif', transform=True, val_split=0.2)\r\n",
+      "2020-10-11 16:54:39,905:INFO: Loading model for training from ../models/100820/resnet18_retrain_trans/resnet18\r\n",
+      "2020-10-11 16:54:39,905:INFO: Model:\r\n",
       "Model(\r\n",
       "  (features): ResNet(\r\n",
       "    (conv1): Conv2d(3, 64, kernel_size=(7, 7), stride=(2, 2), padding=(3, 3), bias=False)\r\n",
@@ -4391,26 +4391,15 @@
       "    (fc): Linear(in_features=512, out_features=16, bias=True)\r\n",
       "  )\r\n",
       ")\r\n",
-      "2020-10-11 16:32:02,649:INFO: Train: epoch 0   learning rate: 0.05\r\n",
-      "We are normalizing during transformation\r\n",
-      "../main.py:260: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"quality\" which is no longer supported as of 3.3 and will become an error two minor releases later\r\n",
+      "2020-10-11 16:54:46,159:INFO: Train: epoch 0   learning rate: 0.05\r\n",
+      "../main.py:258: MatplotlibDeprecationWarning: savefig() got unexpected keyword argument \"quality\" which is no longer supported as of 3.3 and will become an error two minor releases later\r\n",
       "  plt.savefig(args.save + 'test.png', dpi=300, quality=100, format='png')\r\n",
-      "torch.FloatTensor\r\n",
-      "torch.DoubleTensor\r\n",
-      "We are normalizing during transformation\r\n",
-      "torch.FloatTensor\r\n",
-      "torch.DoubleTensor\r\n",
-      "We are normalizing during transformation\r\n",
-      "torch.FloatTensor\r\n",
-      "torch.DoubleTensor\r\n",
-      "We are normalizing during transformation\r\n",
-      "torch.FloatTensor\r\n",
-      "torch.DoubleTensor\r\n",
-      "We are normalizing during transformation\r\n",
-      "torch.FloatTensor\r\n",
-      "torch.DoubleTensor\r\n",
-      "2020-10-11 16:32:06,351:INFO: epoch 1/2, step 5/94193,  loss 0.03051563270832304\r\n",
-      "We are normalizing during transformation\r\n"
+      "2020-10-11 16:54:48,010:INFO: epoch 1/2, step 5/94193,  loss 0.017311987962778143\r\n",
+      "2020-10-11 16:54:51,191:INFO: epoch 1/2, step 10/94193,  loss 0.006856014601297325\r\n",
+      "2020-10-11 16:54:55,151:INFO: epoch 1/2, step 15/94193,  loss 0.0013410863606723117\r\n",
+      "2020-10-11 16:55:00,017:INFO: epoch 1/2, step 20/94193,  loss 0.0008592809551599674\r\n",
+      "2020-10-11 16:55:05,299:INFO: epoch 1/2, step 25/94193,  loss 0.000541637109073778\r\n",
+      "2020-10-11 16:55:11,929:INFO: epoch 1/2, step 30/94193,  loss 0.0004353700735693769\r\n"
      ]
     }
    ],
